--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+erlang-tetrapak (0.3.1.4) unstable; urgency=low
+  * debian packaging fixes
+ -- Felix Lange <fl@travelping.com>  Thu, 07 Feb 2012 16:20:00 +0000
 erlang-tetrapak (0.3.1.3) unstable; urgency=low
   * stability updates
  -- Felix Lange <fl@travelping.com>  Wed, 25 Jan 2012 10:20:00 +0000
