--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+erlang-tetrapak (0.3.1.15) unstable; urgency=low
+
+  * clean the working tree before building the source
+  * handle included_applications for dependencies
+  * require check before pkg:debsrc
+  * various cleanups
+  * add redbug extension
+
+ -- Andreas Schultz <aschultz@tpip.net>  Thu, 29 Nov 2012 10:40:26 +0100
+
 erlang-tetrapak (0.3.1.7) unstable; urgency=low
   * erlang build order fix for parse_transform
  -- Felix Lange <fl@travelping.com>  Thu, 29 May 2012 20:00:00 +0000
