--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+erlang-tetrapak (0.3.1.19) unstable; urgency=low
+
+  * add plugins system for a tetrapak
+
+ -- Dmitry Aleksandrov(Russ) <druss@tpip.net>  Tue, 04 Dec 2012 17:30:00 +0100
+
 erlang-tetrapak (0.3.1.18) unstable; urgency=low
 
   * fix undocumented ct_run return
