add test.ct.coverspec config option
Summary: add test.ct.coverspec config option

Test Plan: on a project that has a cover spec run 'tetrapak test -o test.ct.coverspec <file>'

Reviewers: tbreddin, hsychla, kseidens, druss

Reviewed By: druss

Differential Revision: https://review.tpip.net/D103

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+erlang-tetrapak (0.3.1.20) unstable; urgency=low
+
+  * add test.ct.coverspec config option
+
+ -- Andreas Schultz <aschultz@tpip.net>  Fri, 21 Dec 2012 18:25:19 +0100
+
 erlang-tetrapak (0.3.1.19) unstable; urgency=low
 
   * add plugins system for a tetrapak
