add debsrc .changes file and upgrade format version
Upgrade format to 1.8 (add sha1 and sha256 hash) and add a Debian
.changes file. The .changes file is needed to dput uploads.

--- a/priv/templates/deb_src/changelog
+++ b/priv/templates/deb_src/changelog
@@ -1,3 +1,5 @@
 @@name@@ (@@version@@) unstable; urgency=normal
+
   * this changelog is auto-generated and does not contain useful information
- -- tetrapak <tetrapak@travelping.com>  @@date@@
+
+ -- @@maintainer@@  @@date@@
