make debian distribution and urgency configurable

--- a/priv/templates/deb_src/changelog
+++ b/priv/templates/deb_src/changelog
@@ -1,4 +1,4 @@
-@@name@@ (@@version@@) unstable; urgency=normal
+@@name@@ (@@version@@) @@distribution@@; urgency=@@urgency@@
 
   * this changelog is auto-generated and does not contain useful information
 
